--- a/malaria_cell_detection_vgg19/Malaria Cell Detection Using VGG19 Application.ipynb
+++ b/malaria_cell_detection_vgg19/Malaria Cell Detection Using VGG19 Application.ipynb
@@ -281,13 +281,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "accuracy = model_fit.history['accuracy']\n",
     "val_accuracy = model_fit.history['val_accuracy']\n",
     "\n",
     "loss = model_fit.history['loss']\n",
     "val_loss = model_fit.history['val_loss']\n",
     "\n",
     "epochs = range(len(val_accuracy))\n",
-    "plt.plot(epochs, val_accuracy, 'go', label='Training accuracy')\n",
+    "plt.plot(epochs, accuracy, 'go', label='Training accuracy')\n",
     "plt.plot(epochs, val_accuracy, 'b', label='Validation accuracy')\n",
     "plt.title('Training and validation accuracy')\n",
     "plt.legend()\n",
